# meta-comp

./: .env.example  .gitignore  Dockerfile  README.md  build plan.md  inference.py  instructions.md  openenv.yaml  pyproject.toml  requirements.txt
meta/: Dockerfile  README.md  inference.py
meta/support_ops_env/: __init__.py  models.py  task_bank.py
meta/support_ops_env/server/: support_ops_environment.py
scripts/: validate-submission.sh
server/: __init__.py  app.py
support_ops_env/: README.md  client.py  graders.py  models.py  reward.py  task_bank.py
support_ops_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
support_ops_env/server/: app.py  support_ops_environment.py
tests/: test_env_api.py  test_graders.py  test_inference_logs.py  test_rewards.py  test_tasks.py
