[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support_ops_env"
version = "0.1.0"
description = "Deterministic support operations OpenEnv benchmark"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openenv-core",
  "pydantic>=2.8.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["support_ops_env*", "server*"]
