[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support_ops_env"
version = "0.1.0"
description = "Deterministic support operations OpenEnv benchmark"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openenv-core==0.2.3",
  "pydantic==2.12.5",
  "fastapi==0.135.3",
  "uvicorn==0.42.0",
  "openai==2.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["support_ops_env*", "server*"]
